--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@wordpress/components": "^25.7.0",
 		"@wordpress/i18n": "^4.41.0",
-		"@wordpress/icons": "^9.32.0"
+		"@wordpress/icons": "^9.32.0",
+		"react": "^18.2.0"
 	}
 }
